# LabOop

./: CMakeLists.txt
Console/: Console.cc
include/character/: character.h  container.h
include/functions/: functions.h
src/: character.cc  container.cc  functions.cc
tests/: character_tests.cc  functions_tests.cc
